authelia/Deployment-authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authelia
  name: authelia
  namespace: auth
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: authelia
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: authelia
    spec:
      containers:
      - env:
        - name: AUTHELIA_SESSION_SECRET
          valueFrom:
            secretKeyRef:
              key: AUTHELIA_SESSION_SECRET
              name: authelia-sealed-secret
        - name: AUTHELIA_STORAGE_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              key: AUTHELIA_STORAGE_ENCRYPTION_KEY
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLI_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_ARGOCD_CLI_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_FACTURASCRIPTS_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_FACTURASCRIPTS_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_FACTURASCRIPTS_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_FACTURASCRIPTS_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRAFANA_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRAFANA_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRAFANA_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRAFANA_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRIMMORY_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_GRIMMORY_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_IMMICH_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_IMMICH_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_IMMICH_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_IMMICH_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_JELLYFIN_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_JELLYFIN_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_JELLYFIN_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_JELLYFIN_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_SFTPGO_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_SFTPGO_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_SFTPGO_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_SFTPGO_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_SYNAPSE_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_SYNAPSE_CLIENT_ID
              name: authelia-sealed-secret
        - name: IDENTITY_PROVIDERS_OIDC_CLIENTS_SYNAPSE_CLIENT_SECRET_DIGEST
          valueFrom:
            secretKeyRef:
              key: IDENTITY_PROVIDERS_OIDC_CLIENTS_SYNAPSE_CLIENT_SECRET_DIGEST
              name: authelia-sealed-secret
        - name: AUTHELIA_STORAGE_POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: AUTHELIA_STORAGE_POSTGRES_PASSWORD
              name: authelia-shared-sealed-secret
        - name: X_AUTHELIA_CONFIG_FILTERS
          valueFrom:
            configMapKeyRef:
              key: X_AUTHELIA_CONFIG_FILTERS
              name: authelia-config-env
        image: ghcr.io/authelia/authelia:4.39.28
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 9091
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: authelia
        ports:
        - containerPort: 9091
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 9091
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /config/configuration.yml
          name: configuration-yml
          subPath: configuration.yml
        - mountPath: /config/users_database.yml
          name: merged-users
          readOnly: true
          subPath: users_database.yml
        - mountPath: /config/secrets/oidc/jwks/rsa.2048.key
          name: rsa-2048-key-sealed-secret
          subPath: rsa.2048.key
      enableServiceLinks: false
      volumes:
      - configMap:
          name: configuration-yml
        name: configuration-yml
      - name: rsa-2048-key-sealed-secret
        secret:
          secretName: rsa-2048-key-sealed-secret
      - configMap:
          name: users-database-yml
        name: users-database-yml
      - emptyDir: {}
        name: merged-users
