authelia/IngressRoute-authelia-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: authelia
  name: authelia-ingressroute
  namespace: auth
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`auth.danielramos.me`)
    services:
    - name: authelia
      port: 9091
  tls:
    store:
      name: default
